2017-08-10  Andy Buckley  <andy.buckley@cern.ch>

	* Eliminate C++11 features from headers, and moving some oversized inlines into .cc files.

2017-07-13  Andy Buckley  <andy.buckley@cern.ch>

	* Version 6.2.0 release.

2017-07-11  Andy Buckley  <andy.buckley@cern.ch>

	* Add warning printouts and some verbosity control to the LHAGlue Fortran setlhaparm function.

2017-07-09  Andy Buckley  <andy.buckley@cern.ch>

	* Provide lookupPDF and lookupLHAPDFID functions accepting a single setname/mem string.

	* Finally removed Boost multi_array... and it was sooooo easy. Sorry for the delay! Validated.

2016-08-17  Andy Buckley  <andy.buckley@cern.ch>

	* All Boost usage removed except multi_array.

	* Propagate C++11 compiler definition to Cython build and lhapdf-config; add --cxx flag to lhapdf-config.

2016-08-16  Andy Buckley  <andy.buckley@cern.ch>

	* Add normal and chi-squared quantile functions, and incomplete
	gamma functions, extracted and converted by Graeme Watt based on
	ROOT and Cephes code.

	* Require C++11, and starting to remove Boost.

2016-02-16  Andy Buckley  <andy.buckley@cern.ch>

	* Add x-grouped xf vs Q plots to plotpdfs, and allow the user to
	control which plot groups to make.

2016-02-09  Andy Buckley  <andy.buckley@cern.ch>

	* Improvements to plotpdfs script.

	* Move scripts for installation into a bin directory.

2016-02-08  Andy Buckley  <andy.buckley@cern.ch>

	* Corrections in the lhapdf manager script for Python3 compatibility. Thanks to Frank Siegert.

2015-12-22  Andy Buckley  <andy.buckley@cern.ch>

	* Version 6.1.6 release!

2015-12-21  Andy Buckley  <andy.buckley@cern.ch>

	* Add canonical PDF.orderQCD property to Python PDF, to replace PDF.qcdOrder.

	* Add PDF::quarkMass and PDF::quarkThreshold methods to C++ and Python.

	* Fix quark integer ID mapping to Down/Up metadata keys in AlphaS
	factory routine.

2015-12-18  Andy Buckley  <andy.buckley@cern.ch>

	* Add a cstr_to_fstr function to LHAGlue.cc, for improved C++ to